# wage-engine

./: .clang-format  .gitignore  .tasks  BUILD  CMakeLists.txt  WORKSPACE  bazel-bin  bazel-genfiles  bazel-nge  bazel-out  bazel-testlogs  index.coffee  notes.txt  package.json  tasks.json  wage.cpp
engine/: BUILD  CMakeLists.txt  WORKSPACE  bazel-bin  bazel-engine  bazel-genfiles  bazel-out  bazel-testlogs  boot.js  engine.coffee  engine.cpp  engine.h  engine.js
engine-ext/: BUILD  CMakeLists.txt  WORKSPACE  repositories.bzl
engine-ext/audio-al/: audio.cpp  audio.h  clip.h  data.h  playing_audio.h  util.h  wav.h
engine-ext/input-glfw/: BUILD  input.cpp  input.h
engine-ext/jsrt/: js_system.cpp  js_system.h  jsrt.cpp  jsrt.h  module_manager.cpp  module_manager.h
engine-ext/physics-bullet/: BUILD  entity.cpp  entity.h  phys_entity.cpp  phys_entity.h  physics.cpp  physics.h  util.cpp  util.h
engine-ext/platform-glfw/: BUILD  platform.cpp  platform.h
engine-ext/render-gl/: BUILD  font.cpp  font.h  font_manager.h  index_buffer.cpp  index_buffer.h  material.cpp  material.h  mesh_renderable.h  program.cpp  program.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_manager.h  sprite_renderable.h  text_renderable.h  texture.cpp  texture.h  texture_manager.h  util.cpp  util.h  vao_manager.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
engine-ext/render-vulkan/: BUILD  buffer.cpp  buffer.h  command_pool.cpp  command_pool.h  common.cpp  common.h  context.cpp  context.h  device.cpp  device.h  font.cpp  font.h  font_glyph.cpp  font_glyph.h  font_manager.cpp  font_manager.h  graphics_pipeline.h  image.cpp  image.h  instance.cpp  instance.h  mesh.cpp  mesh.h  model.cpp  model.h  model_manager.cpp  model_manager.h  model_pipeline.h  model_renderable.cpp  model_renderable.h  pipeline.cpp  pipeline.h  render_context.cpp  render_context.h  render_pass.cpp  render_pass.h  scene.cpp  scene.h  shader.cpp  (+18 more)
engine-ext/scene-serializer/: serializer.h
engine/asset/: asset.h  manager.h  spec.h
engine/assets/: BUILD  asset.h  asset_spec.h  buffer.h  fs_buffer.cpp  fs_buffer.h  fs_manager.cpp  fs_manager.h  manager.h  memory_buffer.h
engine/async/: BUILD  dispatch_queue.cpp  dispatch_queue.h
engine/audio/: audio.h  clip_spec.h
engine/common/: component.js
engine/component/: color.cpp
engine/core/: BUILD  config.h  core.cpp  core.h  frame.h  logger.cpp  logger.h  mode.h  service.h  service_map.h  system.cpp  system.h
engine/ecs/: common.h  component_pool.h  entity.cpp  entity.h  entity_manager.h  func_system.h  id_pool.h  manager.h  messages.h  registry.cpp  registry.h  service.h  system.cpp  system.h  system_context.h  system_manager.h  view.h
engine/entity/: BUILD  component.cpp  component.h  context.h  entity.cpp  entity.h  manager.cpp  manager.h  reference.cpp  reference.h  scene.h
engine/fs/: BUILD  file.cpp  file.h  file_system.h  local.cpp  local.h  service.h
engine/input/: BUILD  input.cpp  input.h  key.h  key_event.cpp  key_event.h  key_modifier.h  manager.coffee  mouse_button.h  mouse_button_event.h  mouse_event.h  mouse_move_event.h  mouse_scroll_event.h  service.h  test.coffee
engine/job/: batch.h  manager.h
engine/jsrt/: BUILD  js_object_wrapper.cpp  js_object_wrapper.h  js_system.cpp  js_system.h  jsrt.cpp  jsrt.h  module_manager.cpp  module_manager.h  util.cpp  util.h
engine/math/: bounding_box.h  bounding_sphere.h  color.cpp  color.h  frustum.h  matrix.cpp  matrix.h  plane.h  quaternion.cpp  quaternion.h  transform.cpp  transform.h  transform_chain.h  vector.cpp  vector.h
engine/memory/: allocator.cpp  allocator.h  buffer.h  buffer_stream.h  common.h  dynamic_storage.h  fast_alloc_pool.h  fixed_storage.h  indexed_storage.h  input_stream.h  map.h  object_pool.cpp  object_pool.h  pool.h  pool_storage.h  reference.cpp  reference.h  storage.h
engine/messaging/: BUILD  messaging.cpp  messaging.h
engine/new_ecs/: component_pool.h  entity.cpp  entity.h  entity_manager.h  id_pool.h  manager.h  messages.h  registry.h  system.h  system_context.h  system_manager.h  view.h
engine/old_ecs/: component_pool.h  entity.h  entity_manager.h  id_pool.h  registry.cpp  registry.h  system.cpp  system.h  system_context.h  view.h  (+1 more)
(+573 files in other folders)
